--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
   <!-- BlockUI -->
   <link rel="stylesheet" href="assets/css/toastr.min.css">
   <script src="assets/js/block-ui.js"></script>
-  <!-- Bootstrap Bundle (includes Popper.js) -->
+  <!-- Bootstrap Bundle -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.1.0/mdb.min.css" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.1.0/mdb.min.js" defer></script>
   <!-- Datatable -->
@@ -41,11 +41,11 @@
 <body>
   <header>
     <nav role="navigation">
-      <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3c144f;">
+      <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6e0e9b;">
       <!-- Container wrapper -->
       <div class="container-fluid">
         <!-- Navbar brand -->
-        <img src="assets/images/Logo2.PNG" class="navbar-brand" style="max-height: 75px; width: auto;">
+        <img src="assets/images/Logo_name.png" class="navbar-brand" style="max-height: 75px; width: auto;">
 
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -98,8 +98,7 @@
               id="navbar-search-btn" 
               class="btn" 
               type="button" 
-              style="padding: .45rem 1.5rem .35rem; color: white; border: 1px solid white; background-color: transparent;"
-            >Search
+              style="padding: .45rem 1.5rem .35rem; color: white; border: 1px solid white; background-color: transparent;">Search
             </button>
           </form>
         </div>
@@ -109,66 +108,47 @@
 </nav>
 </header>
 
-<section id="pageContent">
-    <main id="spapp" role="main">
-        <section id="signin" data-load="signin.html"></section>
-        <section id="profile" data-load="profile.html"></section>
-        <section id="login" data-load="login.html"></section>
-        <section id="cart" data-load="cart.html"></section>
-        <section id="browse" data-load="all_products.html"></section>
-        <section id="product" data-load="product.html"></section>
-        <section id="wishlist" data-load="wishlist.html"></section>
-        <section id="admin_dashboard" data-load="admin_dashboard.html"></section>
-        <section id="dashboard" data-load="dashboard.html"></section>
-        <section id="error_page" data-load="error_page.html"></section>
-    </main>
-</section>
+  <section id="pageContent">
+      <main id="spapp" role="main">
+          <section id="signin" data-load="signin.html"></section>
+          <section id="profile" data-load="profile.html"></section>
+          <section id="login" data-load="login.html"></section>
+          <section id="cart" data-load="cart.html"></section>
+          <section id="browse" data-load="all_products.html"></section>
+          <section id="product" data-load="product.html"></section>
+          <section id="wishlist" data-load="wishlist.html"></section>
+          <section id="admin_dashboard" data-load="admin_dashboard.html"></section>
+          <section id="dashboard" data-load="dashboard.html"></section>
+          <section id="error_page" data-load="error_page.html"></section>
+      </main>
+  </section>
 
 
   <!-- Footer -->
-  <footer
-          class="text-center text-lg-start text-white"
-          style="background-color: #3c144f;"
-          >
+  <footer class="text-center text-lg-start text-white" style="background-color: #6e0e9b;">
     <!-- Section: Social media -->
-    <section
-              class="d-flex justify-content-between p-4"
-              style="background-color: #3c144f"
-              >
-    </section>
-    <!-- Section: Social media -->
-
+    <section class="d-flex justify-content-between p-4" style="background-color: #6e0e9b"></section>
     <!-- Section: Links  -->
     <section class="" >
       <div class="container text-center text-md-start mt-5">
         <div class="row mt-3">
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <h6 style="color: #F1E9CF;" class="text-uppercase fw-bold">Cuppa Tea</h6>
-
-            <hr
-                class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #4F1F14; height: 2px"
-                />
-            <p>
-              We are a small business with a dream
-              to bring highest quality tea to your
-              doorstep.
-            </p>
+            <h6 style="color: #ffffff;" class="text-uppercase fw-bold">Cuppa Tea</h6>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #4F1F14; height: 2px" />
+            <p>Explore the East and West winds, embrace them and find a unique match for yourself.</p>
           </div>
 
-
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <h6 style="color: #F1E9CF;" class="text-uppercase fw-bold">Contact</h6>
-
+            <h6 style="color: #ffffff;" class="text-uppercase fw-bold">Contact</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #3c144f; height: 2px"
+                style="width: 60px; background-color: #6e0e9b; height: 2px"
                 />
-            <p><i class="fas fa-home mr-3" style="color: #F1E9CF;"></i> Sarajevo, 71000, Bosnia and Herzegovina</p>
-            <p><i class="fas fa-envelope mr-3" style="color: #F1E9CF;"></i> edina.kurto@stu.ibu.edu.ba</p>
-            <p><i class="fas fa-envelope mr-3" style="color: #F1E9CF;"></i> arman.culah@stu.ibu.edu.ba</p>
-            <p><i class="fas fa-phone mr-3" style="color: #F1E9CF;"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print mr-3" style="color: #F1E9CF;"></i> + 01 234 567 89</p>
+            <p><i class="fas fa-home mr-3" style="color: #ffffff;"></i> Sarajevo, 71000, Bosnia and Herzegovina</p>
+            <p><i class="fas fa-envelope mr-3" style="color: #ffffff;"></i> edina.kurto@stu.ibu.edu.ba</p>
+            <p><i class="fas fa-envelope mr-3" style="color: #ffffff;"></i> arman.culah@stu.ibu.edu.ba</p>
+            <p><i class="fas fa-phone mr-3" style="color: #ffffff;"></i> + 387 062 118 520</p>
+            <p><i class="fas fa-print mr-3" style="color: #ffffff;"></i> + 387 061 312 890</p>
           </div>
         </div>
       </div>
@@ -176,13 +156,7 @@
 
 
     <!-- Copyright -->
-    <div
-          class="text-center p-3"
-          style="background-color: #290d36"
-          >
-      © 2025 Copyright:
-      <a class="text-white" href="https://www.ibu.edu.ba//">IBU</a>
-    </div>
+    <div class="text-center p-3" style="background-color: #561b72"> © 2025 Copyright:<a class="text-white" href="https://www.ibu.edu.ba//">IBU</a></div>
   </footer>
 
   <script>Utils.init_spapp();</script>
