--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,8 +133,8 @@
       <div class="container text-center text-md-start mt-5">
         <div class="row mt-3">
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <h6 style="color: #ffffff;" class="text-uppercase fw-bold">Cuppa Tea</h6>
-            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #4F1F14; height: 2px" />
+            <h6 style="color: #ffffff;" class="text-uppercase fw-bold">Smell of East and West</h6>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #8a6b99; height: 2px" />
             <p>Explore the East and West winds, embrace them and find a unique match for yourself.</p>
           </div>
 
@@ -153,12 +153,8 @@
         </div>
       </div>
     </section>
-
-
-    <!-- Copyright -->
     <div class="text-center p-3" style="background-color: #561b72"> © 2025 Copyright:<a class="text-white" href="https://www.ibu.edu.ba//">IBU</a></div>
   </footer>
-
   <script>Utils.init_spapp();</script>
 </body>
 </html>
